Update IT for Tomcat10.X